@@ -28,6 +28,7 @@ package com.sun.tools.jdeps;
 import com.sun.tools.classfile.Dependency.Location;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Deque;
 import java.util.LinkedHashSet;
 import java.util.LinkedList;
@@ -91,7 +92,7 @@ public class DepsAnalyzer {
         // classpath to the root archives
         if (filter.hasIncludePattern() || filter.hasTargetFilter()) {
             configuration.getModules().values().stream()
-                .filter(source -> filter.include(source) && filter.matches(source))
+                .filter(source -> include(source) && filter.matches(source))
                 .forEach(this.rootArchives::add);
         }
 
@@ -161,14 +162,14 @@ public class DepsAnalyzer {
     Set<Archive> archives() {
         if (filter.requiresFilter().isEmpty()) {
             return archives.stream()
-                .filter(filter::include)
+                .filter(this::include)
                 .filter(Archive::hasDependences)
                 .collect(Collectors.toSet());
         } else {
             // use the archives that have dependences and not specified in --require
             return archives.stream()
-                .filter(filter::include)
-                .filter(source -> !filter.requiresFilter().contains(source))
+                .filter(this::include)
+                .filter(source -> !filter.requiresFilter().contains(source.getName()))
                 .filter(source ->
                         source.getDependencies()
                               .map(finder::locationToArchive)
@@ -197,7 +198,6 @@ public class DepsAnalyzer {
                         .distinct()
                         .map(configuration::findClass)
                         .flatMap(Optional::stream)
-                        .filter(filter::include)
                         .collect(toSet());
     }
 
@@ -238,7 +238,7 @@ public class DepsAnalyzer {
                     continue;
 
                 Archive archive = configuration.findClass(target).orElse(null);
-                if (archive != null && filter.include(archive)) {
+                if (archive != null) {
                     archives.add(archive);
 
                     String name = target.getName();
@@ -255,6 +255,21 @@ public class DepsAnalyzer {
             unresolved = deque;
             deque = new ConcurrentLinkedDeque<>();
         } while (!unresolved.isEmpty() && depth-- > 0);
+    }
+
+    /*
+     * Tests if the given archive is requested for analysis.
+     * It includes the root modules specified in --module, --add-modules
+     * or modules specified on the command line
+     *
+     * This filters system module by default unless they are explicitly
+     * requested.
+     */
+    public boolean include(Archive source) {
+        Module module = source.getModule();
+        // skip system module by default
+        return  !module.isSystem()
+                    || configuration.rootModules().contains(source);
     }
 
     // ----- for testing purpose -----
